--- a/JavaSwingSeleniumTest/src/javaswingseleniumtest/mainTest.form
+++ b/JavaSwingSeleniumTest/src/javaswingseleniumtest/mainTest.form
@@ -63,10 +63,12 @@
                       <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                       <Component id="btnMoTrangDangNhap" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                      <Component id="btnMoTrangDangKy" min="-2" pref="168" max="-2" attributes="0"/>
+                      <Component id="btnMoTrangDangKy" min="-2" pref="200" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" pref="123" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="103" max="32767" attributes="0"/>
+              <EmptySpace pref="56" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -74,12 +76,17 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="195" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnMoTrangChu" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                  <Component id="btnMoTrangDangNhap" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
-                  <Component id="btnMoTrangDangKy" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Component id="jButton1" min="-2" pref="46" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jLabel1" min="-2" pref="195" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btnMoTrangChu" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="btnMoTrangDangNhap" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="btnMoTrangDangKy" alignment="3" min="-2" pref="45" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
               <EmptySpace pref="80" max="32767" attributes="0"/>
           </Group>
@@ -125,6 +132,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMoTrangDangKyActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="B&#x1ead;t Load Test"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
